add welcome banner

--- a/app/views/sites/main/_home.html.erb
+++ b/app/views/sites/main/_home.html.erb
@@ -1,8 +1,7 @@
 <!-- Welcome photo -->
-<div class="welcome-container my-4">
-  <div class="welcome-banner"></div>
-</div>
+<img class="img-fluid" src="/assets/welcome-banner.jpeg" />
 
+<div class="m-4"></div>
 <!-- The big day -->
 <h2>Saturday, December 2nd</h2>
 <h4 class="shimmer"><%= days_to_go %></h4>
