--- a/app/views/sites/main.html.erb
+++ b/app/views/sites/main.html.erb
@@ -1,11 +1,11 @@
 <div class="container text-center py-5">
   <!-- Welcome text -->
   <h1>Angela <small class="fs-4">&</small> Ryan</h1>
-  <h2 class="mb-4">
-    <i class="bi bi-dash-lg fs-1 align-text-top"></i>
+  <p class="fs-3">
+    <i class="bi bi-dash-lg fs-3 align-text-top"></i>
     Are Getting Married!
-    <i class="bi bi-dash-lg fs-1 align-text-top"></i>
-  </h2>
+    <i class="bi bi-dash-lg fs-3 align-text-top"></i>
+  </p>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
