fix welcome banner; travel info

--- a/app/views/sites/main.html.erb
+++ b/app/views/sites/main.html.erb
@@ -1,7 +1,7 @@
 <div class="container text-center py-5">
   <!-- Welcome text -->
   <h1>Angela <small class="fs-4">&</small> Ryan</h1>
-  <p class="fs-3">
+  <p class="tagline fs-3">
     <i class="bi bi-dash-lg fs-3 align-text-top"></i>
     Are Getting Married!
     <i class="bi bi-dash-lg fs-3 align-text-top"></i>
