--- a/app/views/sites/main/_travel.html.erb
+++ b/app/views/sites/main/_travel.html.erb
@@ -2,24 +2,57 @@
 <img class="img-fluid my-4" src="/assets/loews.jpeg" />
 
 <div class="row container">
+  <!-- HOTEL -->
   <div class="col-6 border-end align-self-center">
-
     <svg xmlns="http://www.w3.org/2000/svg" aria-labelledby="Hotel5" role="img" class="zui-svg-icon css-1ky1smp" viewBox="0 0 64 64" color="currentColor" fill="currentColor" style="width: 70px; height: 70px;"><title id="Hotel5">Hotel</title><g transform="translate(12 8)" fill="none" fill-rule="evenodd" stroke="currentColor"><circle cx="4" cy="48.5" r="2"></circle><circle cx="37" cy="48.5" r="2"></circle><path d="M.5 46h40" stroke-linecap="round"></path><path d="M2 21.995C2 12.056 10.057 4 20 4c9.941 0 18 8.06 18 17.995V46H2V21.995Z"></path><path d="M18.5 1.5h4" stroke-linecap="round"></path><path d="M20.5 1.5v2M23.5 34v9M32.5 34v9" stroke-linecap="square"></path><path stroke-linejoin="round" d="M5 23.5h14v20H5zM21 33.5h14v10H21zM9 20.5h6v3H9zM26 30.5h4v3h-4z"></path><path d="M5.5 28h13M5.5 30h13" stroke-linecap="square"></path></g></svg>
-
     <p>Hotel</p>
-
     <h3>LOEWS PHILADELPHIA HOTEL</h3>
-
     <address>
       <a href="https://goo.gl/maps/iHW3fUbE5ztYEQCd8" target="_blank">1200 Market Street<br>Philadelphia, PA 19107</a>
     </address>
-
   </div>
   <div class="col-6 align-self-center">
-
     <p>To get the discounted rate, make hotel reservations online or call the toll-free number 888-563-9736.</p>
-
     <a href="https://www.loewshotels.com/philadelphia-hotel" target="_blank" class="btn btn-lg btn-info">Click here to book!</a>
-
   </div>
+
+  <div class="m-4"></div>
+
+  <!-- FLIGHT -->
+  <div class="col-6 border-end align-self-center">
+    <svg xmlns="http://www.w3.org/2000/svg" aria-labelledby="Airplane Outline9" role="img" class="zui-svg-icon css-1ky1smp" viewBox="0 0 26 32" color="currentColor" fill="transparent" style="width: 70px; height: 70px;"><title id="Airplane Outline9">Airplane Outline</title><path d="m13.03 25.609-5.4968 2.9182v-1.9917l2.8485-2.9689v-7.0538l-9.9295 3.8672v-1.9227l9.981-7.2204v-7.4903s0.0019-0.84173 0.4864-1.5667c0.361-0.54007 0.9897-1.0153 2.085-1.0296 0.0085-3.3e-4 0.017-3e-4 0.0254-2.5e-4 0.0085-5e-5 0.017-8e-5 0.0254-8e-5 1.0954 0.01459 1.7241 0.48986 2.0851 1.0299 0.4845 0.72498 0.4864 1.5667 0.4864 1.5667v7.4903l9.981 7.2204v1.9227l-9.9295-3.8672v7.0538l2.8485 2.9689v1.9917l-5.4969-2.9182z" clip-rule="evenodd" fill-rule="evenodd" stroke="currentColor" stroke-linejoin="round" stroke-width=".52147"></path></svg>
+    <p>Flight</p>
+    <h3>(PHL) PHILADELPHIA INTERNATIONAL AIRPORT</h3>
+  </div>
+  <div class="col-6 align-self-center">
+    <p>PHL is just a 20 minute drive to the Loews Philadelphia Hotel (~11 miles).</p>
+  </div>
+
+  <div class="m-4"></div>
+
+  <!-- TRAIN -->
+  <div class="col-6 border-end align-self-center">
+    <svg xmlns="http://www.w3.org/2000/svg" aria-labelledby="Train10" role="img" class="zui-svg-icon css-1ky1smp" viewBox="0 0 64 64" color="currentColor" fill="currentColor" style="width: 70px; height: 70px;"><title id="Train10">Train</title><g transform="translate(16 6)" stroke="currentColor" fill="none" fill-rule="evenodd"><rect y="3.855" width="32.764" height="38.545" rx="2"></rect><path d="M13.49 3.855H9.637V.993c0-.549.443-.993.993-.993h1.87c.547 0 .992.442.992.993v2.862ZM23.127 3.855h-3.854V.993c0-.549.442-.993.992-.993h1.87c.548 0 .992.442.992.993v2.862Z"></path><path d="M11.082 7.227h10.6" stroke-linecap="round"></path><rect stroke-linejoin="round" x="3.855" y="10.6" width="25.055" height="12.527" rx="1"></rect><circle cx="8.673" cy="33.727" r="2.891"></circle><circle cx="24.091" cy="33.727" r="2.891"></circle><path d="M8.19 45.773 1.91 52.055M24.573 45.773l6.282 6.282M4.336 49.627h24.091" stroke-linecap="round"></path></g></svg>
+    <p>Train</p>
+    <h3>PATCO 8TH & MARKET STREET STATION</h3>
+  </div>
+  <div class="col-6 align-self-center">
+    <p>The PATCO 8th & Market station is an 8 minute walk from the Loews Hotel. A great option for those traveling from Northern New Jersey - the PATCO line connects to NJ Transit at the Broadway Station.</p>
+    <a href="http://www.ridepatco.org/stations/routemap.html" target="_blank" class="btn btn-lg btn-info">Travel on PATCO</a>
+  </div>
+
+  <div class="m-4"></div>
+
+  <!-- TRAIN -->
+  <div class="col-6 border-end align-self-center">
+    <svg xmlns="http://www.w3.org/2000/svg" aria-labelledby="Train10" role="img" class="zui-svg-icon css-1ky1smp" viewBox="0 0 64 64" color="currentColor" fill="currentColor" style="width: 70px; height: 70px;"><title id="Train10">Train</title><g transform="translate(16 6)" stroke="currentColor" fill="none" fill-rule="evenodd"><rect y="3.855" width="32.764" height="38.545" rx="2"></rect><path d="M13.49 3.855H9.637V.993c0-.549.443-.993.993-.993h1.87c.547 0 .992.442.992.993v2.862ZM23.127 3.855h-3.854V.993c0-.549.442-.993.992-.993h1.87c.548 0 .992.442.992.993v2.862Z"></path><path d="M11.082 7.227h10.6" stroke-linecap="round"></path><rect stroke-linejoin="round" x="3.855" y="10.6" width="25.055" height="12.527" rx="1"></rect><circle cx="8.673" cy="33.727" r="2.891"></circle><circle cx="24.091" cy="33.727" r="2.891"></circle><path d="M8.19 45.773 1.91 52.055M24.573 45.773l6.282 6.282M4.336 49.627h24.091" stroke-linecap="round"></path></g></svg>
+    <p>Train</p>
+    <h3>AMTRAK 30TH STREET STATION</h3>
+  </div>
+  <div class="col-6 align-self-center">
+    <p>A great option for those traveling from NYC or CT. Amtrak can get you from NYC Penn Station in 1 hour and 20 minutes. It's about a 10 minute ride to the Loews Hotel.</p>
+    <a href="https://www.amtrak.com/home" target="_blank" class="btn btn-lg btn-info">Travel on AMTRAK</a>
+  </div>
+
+
 </div>
