--- a/app/views/sites/main/_venue.html.erb
+++ b/app/views/sites/main/_venue.html.erb
@@ -10,11 +10,7 @@
 </address>
 
 <h3>Saturday, December 2nd</h3>
-<p>4:00 PM - 10:00 PM</p>
-
-<p>Doors open at 3:40pm. The ceremony starts promptly at 4pm.</p>
-
-<p>Semi-Formal: Tuxes and gowns are welcome, and so are suits and cocktail dresses.</p>
+<p>Time TBD</p>
 
 <p>The ceremony, cocktail hour and reception will all take place indoors at World Cafe Live.</p>
 
