--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -44,12 +44,6 @@ hr {
     --bs-navbar-padding-y: 0;
     --bs-navbar-nav-link-padding-x: 1.5rem;
 }
-@media (min-width: 992px) {
-    .nav-link.fs-3 {
-        font-size: 1.25rem!important;
-    }
-}
-
 
 .navbar-toggler {
     position: fixed;
@@ -140,9 +134,26 @@ body.site-main h1:after {
 body.site-main h1 {
     font-size: 4rem;
     position: relative;
-    max-width: 8em;
+    max-width: 5em;
     margin: 0 auto;
-    line-height: 1.5;
+}
+body.site-main .tagline {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+
+
+@media (min-width: 992px) {
+    body.site-main .tagline {
+        margin-top: 0;
+    }
+    .nav-link.fs-3 {
+        font-size: 1.25rem!important;
+    }
+    body.site-main h1 {
+        max-width: 8em;
+        line-height: 1.5;
+    }
 }
 
 /* Styles for admin site */
