--- a/app/views/sites/main.html.erb
+++ b/app/views/sites/main.html.erb
@@ -30,7 +30,7 @@
           <a class="nav-link fs-3" target="_blank" href="https://www.zola.com/registry/aqrt">Registry</a>
         </li>
         <li class="nav-item align-self-center" role="presentation">
-          <button class="btn btn-sm btn-danger fs-3 m-2" data-bs-toggle="tab" data-bs-target="#nav-rsvp" role="tab" aria-controls="settings" aria-selected="false">RSVP</button>
+          <button class="btn btn-sm btn-danger fs-3" data-bs-toggle="tab" data-bs-target="#nav-rsvp" role="tab" aria-controls="settings" aria-selected="false">RSVP</button>
         </li>
       </ul>
     </div>
