--- a/app/views/sites/main/_travel.html.erb
+++ b/app/views/sites/main/_travel.html.erb
@@ -8,7 +8,7 @@
     <p>Hotel</p>
     <h3>LOEWS PHILADELPHIA HOTEL</h3>
     <address>
-      <a href="https://goo.gl/maps/iHW3fUbE5ztYEQCd8" target="_blank">1200 Market Street<br>Philadelphia, PA 19107</a>
+      <a href="https://goo.gl/maps/iHW3fUbE5ztYEQCd8" target="_blank">1200 Market Street</a>
     </address>
   </div>
   <div class="col-6 align-self-center">
@@ -25,7 +25,7 @@
     <h3>(PHL) PHILADELPHIA INTERNATIONAL AIRPORT</h3>
   </div>
   <div class="col-6 align-self-center">
-    <p>PHL is just a 20 minute drive to the Loews Philadelphia Hotel (~11 miles).</p>
+    <p>PHL is just a 20 minute drive to the Loews Philadelphia Hotel.</p>
   </div>
 
   <div class="m-4"></div>
