--- a/app/views/sites/main/_venue.html.erb
+++ b/app/views/sites/main/_venue.html.erb
@@ -10,12 +10,8 @@
 </address>
 
 <h3>Saturday, December 2nd</h3>
-<p>Time TBD</p>
+<p class="text-danger">Time to be announced.</p>
 
-<p>The ceremony, cocktail hour and reception will all take place indoors at World Cafe Live.</p>
+<p>The ceremony, cocktail hour, and reception will take place indoors at World Cafe Live.</p>
 
-<p>There is ample street parking available and a nearby parking lot or garage for a fee.</p>
-
-<p>We respectfully ask that no children under the age of 12 attend the ceremony and reception.</p>
-
-<p>We cant wait to see you all!</p>
+<p>There is metered street parking available and a nearby <a href="https://goo.gl/maps/wRj29GpKFUR8VV2Z6" target="_blank">parking lot</a> or <a href="https://goo.gl/maps/hh4quEcbJxFXgXTr6" target="_blank">covered garage</a> for a fee.</p>
