--- a/app/views/sites/main/_rsvp.html.erb
+++ b/app/views/sites/main/_rsvp.html.erb
@@ -32,6 +32,7 @@
           <%= form_with url: "/rsvp", method: :post, id: 'rsvp-form' do %>
             <div id="rsvp-form-body"></div>
           <% end %>
+          <small class="text-muted">We respectfully ask that no children under the age of 12 attend the ceremony and reception.</small>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
