--- a/app/views/sites/main/_home.html.erb
+++ b/app/views/sites/main/_home.html.erb
@@ -10,7 +10,8 @@
 <!-- Our story! -->
 <h3>OUR STORY</h3>
 <p style="white-space: pre-wrap;">
-  It all started in the summer of 2021 when Ryan and Angela first connected through a dating app (Hinge). Ryan asked Angela out on their first date to his favorite roast beef sandwich place in south Philly (Nicks). They almost immediately hit it off and soon after spent all their free time together. They enjoyed camping, cooking, concerts, eating out, traveling, spending time with family and taking Bella (Ryan’s dog) on long walks. Angela moved in with Ryan in April of 2022 and 8 months later Ryan proposed to Angela!
+  It all started in the summer of 2021 when Ryan and Angela first connected through a dating app (Hinge). Ryan asked Angela out on their first date to his favorite roast beef sandwich place in south Philly (Nicks). It was a Monday night so the date was expected to be a short one. As Nicks was closing down, neither wanted the date to end, so they walked around the neighborhood until they found a bar that was open and shot some pool. After closing that place down as well, they parted ways but soon after were inseparable, spending all their free time together.
+  They enjoyed camping, cooking, concerts, eating out, traveling, spending time with family/friends and taking Bella (Ryan’s dog) on long walks. Angela moved in with Ryan in April of 2022 and 8 months later Ryan proposed!
 </p>
 
 <!-- Our photos! -->
@@ -18,29 +19,28 @@
 
 <p style="white-space: pre-wrap;">
   How did Ryan propose?
-  Angela: We went to world café live to have dinner and watch a band play. Once the band was done playing, he asked me to go on stage for a picture with him. I thought it was a silly idea and said no. As we were leaving, Ryan wanted to check out their larger stage downstairs. I really didn’t want to go but I agreed to make it a very quick stop. He once again asked if I wanted a picture on the stage. I felt bad saying no again so we made our way to the stage.
-  I’m sure you can guess the rest…. While taking pictures, he got down on one knee and proposed! We’ll be getting married on that same stage exactly one year after the proposal!
-</p>
+  Angela: We were watching a band play at our favorite music venue. Once the band was done playing, he asked to get a picture on stage with him. I thought it was a silly idea and said no even though he was being very persistent. As we were leaving, Ryan wanted to check out their larger stage downstairs. I really didn’t want to go but I agreed to make it a very quick stop. He once again asked if I wanted a picture on the stage. I felt bad saying no again so we made our way to the stage.
+  I’m sure you can guess the rest…. While taking pictures, he got down on one knee and proposed! What's so special is we’ll be getting married on that very same stage exactly one year from then!</p>
 
 <img class="img-fluid my-5" src="/assets/engaged.jpeg" />
 
 <p style="white-space: pre-wrap;">
   What was your most memorable date?
-  Both: Walking to our local diner on Sunday mornings for brunch. Angela loves drenching her corned beef hash in Ryan's homemade hot sauce!
+  Both: Walking to our local diner on Sunday mornings for brunch. Angela loves drenching her corned beef hash with Ryan's homemade hot sauce!
 
   What is your favorite trip together?
   Angela: Our trip to Mexico! It was such a fun trip with friends and I loved experiencing Ryan's first international trip together.
-  Ryan: I love all of our camping trips although her idea of camping is different than mine. I like camp fires and good food. She likes dehydrated food out of a bag and hiking.
+  Ryan: I love all of our camping trips although her idea of camping is different than mine. I like camp fires and good food. She likes hiking and dehydrated food out of a bag.
 
-  What was your first impressions?
-  Ryan: She’s really cute but I don’t think she’ll likes me….
-  Angela: At first, I thought his hair was messy but that was quickly forgotten by his ability to make me laugh.
+  What was your first impression?
+  Ryan: She’s really cute.... I'll have to get creative to win her over.
+  Angela: I thought he was attractive but also very high energy... like a little much ha. I wasn't sure I could keep up at first but it ended up being a perfect fit.
 
   What is your favorite activity together?
   Angela: Traveling!
   Ryan: A quiet night in.
 
   What's your favorite thing about the other person?
-  Angela: I love how hard-working and caring he is. It’s his thoughtfulness that really drew me in. He always knows how to make me feel special and I can’t wait to call him my husband!
-  Ryan: She’s really ambitious and an excellent planner. Whether its what to eat for dinner or where to spend our retirement, I love making plans with her.
+  Angela: I love how hard-working and caring he is. He always knows how to make me feel special and is so thoughtful and sweet with me. I can’t wait to call him my husband!
+  Ryan: She’s really ambitious and an excellent planner. Whether it’s what to eat for dinner or where to spend our retirement, I love making plans with her.
 </p>
