--- a/app/views/sites/main/_travel.html.erb
+++ b/app/views/sites/main/_travel.html.erb
@@ -12,7 +12,7 @@
     </address>
   </div>
   <div class="col-6 align-self-center">
-    <p>To get the discounted rate, make hotel reservations online or call the toll-free number 888-563-9736.</p>
+    <small>To get the discounted rate, make hotel reservations online or call the toll-free number 888-563-9736.</small>
     <a href="https://www.loewshotels.com/philadelphia-hotel" target="_blank" class="btn btn-lg btn-info">Click here to book!</a>
   </div>
 
@@ -25,7 +25,7 @@
     <h3>(PHL) PHILADELPHIA INTERNATIONAL AIRPORT</h3>
   </div>
   <div class="col-6 align-self-center">
-    <p>PHL is just a 20 minute drive to the Loews Philadelphia Hotel.</p>
+    <small>PHL is just a 20 minute drive to the Loews Philadelphia Hotel.</small>
   </div>
 
   <div class="m-4"></div>
@@ -37,7 +37,7 @@
     <h3>PATCO 8TH & MARKET STREET STATION</h3>
   </div>
   <div class="col-6 align-self-center">
-    <p>The PATCO 8th & Market station is an 8 minute walk from the Loews Hotel. A great option for those traveling from Northern New Jersey - the PATCO line connects to NJ Transit at the Broadway Station.</p>
+    <small>The PATCO 8th & Market station is an 8 minute walk from the Loews Hotel. A great option for those traveling from Northern New Jersey - the PATCO line connects to NJ Transit at the Broadway Station.</small>
     <a href="http://www.ridepatco.org/stations/routemap.html" target="_blank" class="btn btn-lg btn-info">Travel on PATCO</a>
   </div>
 
@@ -50,9 +50,7 @@
     <h3>AMTRAK 30TH STREET STATION</h3>
   </div>
   <div class="col-6 align-self-center">
-    <p>A great option for those traveling from NYC or CT. Amtrak can get you from NYC Penn Station in 1 hour and 20 minutes. It's about a 10 minute ride to the Loews Hotel.</p>
+    <small>A great option for those traveling from NYC or CT. Amtrak can get you from NYC Penn Station in 1 hour and 20 minutes. It's about a 10 minute ride to the Loews Hotel.</small>
     <a href="https://www.amtrak.com/home" target="_blank" class="btn btn-lg btn-info">Travel on AMTRAK</a>
   </div>
-
-
 </div>
