--- a/app/views/sites/main/_home.html.erb
+++ b/app/views/sites/main/_home.html.erb
@@ -14,15 +14,13 @@
   They enjoyed camping, cooking, concerts, eating out, traveling, spending time with family/friends and taking Bella (Ryan’s dog) on long walks. Angela moved in with Ryan in April of 2022 and 8 months later Ryan proposed!
 </p>
 
-<!-- Our photos! -->
 <img class="img-fluid my-5" src="/assets/outside-nicks-philadelphia.jpeg" />
 
 <p style="white-space: pre-wrap;">
   How did Ryan propose?
   Angela: We were watching a band play at our favorite music venue. Once the band was done playing, he asked to get a picture on stage with him. I thought it was a silly idea and said no even though he was being very persistent. As we were leaving, Ryan wanted to check out their larger stage downstairs. I really didn’t want to go but I agreed to make it a very quick stop. He once again asked if I wanted a picture on the stage. I felt bad saying no again so we made our way to the stage.
-  I’m sure you can guess the rest…. While taking pictures, he got down on one knee and proposed! What's so special is we’ll be getting married on that very same stage exactly one year from then!</p>
-
-<img class="img-fluid my-5" src="/assets/engaged.jpeg" />
+  I’m sure you can guess the rest…. While taking pictures, he got down on one knee and proposed! What's so special is we’ll be getting married on that very same stage exactly one year from then!
+</p>
 
 <p style="white-space: pre-wrap;">
   What was your most memorable date?
