--- a/app/views/sites/admin/_guests.html.erb
+++ b/app/views/sites/admin/_guests.html.erb
@@ -1,5 +1,5 @@
 <%= form_with url: guests_path, id: 'guests' do |form| %>
-  <%= form.hidden_field :guests_data, value: guests_data %>
+  <%= form.hidden_field :guests_data, value: guests_data_admin %>
 <% end %>
 
 <div id="guests-summary" class="row text-center border mb-3 p-3">
