--- a/app/views/sites/main/_travel.html.erb
+++ b/app/views/sites/main/_travel.html.erb
@@ -13,7 +13,7 @@
   </div>
   <div class="col-6 align-self-center">
     <p><small>To get the discounted rate, make hotel reservations online or call the toll-free number 888-563-9736.</small></p>
-    <a href="https://www.loewshotels.com/philadelphia-hotel" target="_blank" class="btn btn-lg btn-info">Click here to book!</a>
+    <a href="https://www.loewshotels.com/philadelphia-hotel/quiceno-tulino-wedding" target="_blank" class="btn btn-lg btn-info">Click here to book!</a>
   </div>
 
   <div class="m-4"></div>
