--- a/app/views/sites/main/_home.html.erb
+++ b/app/views/sites/main/_home.html.erb
@@ -1,5 +1,5 @@
 <!-- Welcome photo -->
-<img class="img-fluid" src="/assets/welcome-banner.jpeg" />
+<img class="img-fluid" src="/assets/DSC_9398.jpeg" />
 
 <div class="m-4"></div>
 <!-- The big day -->
@@ -9,36 +9,28 @@
 
 <!-- Our story! -->
 <h3>OUR STORY</h3>
-<p style="white-space: pre-wrap;">
-  It all started in the summer of 2021 when Ryan and Angela first connected through a dating app (Hinge). Ryan asked Angela out on their first date to his favorite roast beef sandwich place in south Philly (Nicks). It was a Monday night so the date was expected to be a short one. As Nicks was closing down, neither wanted the date to end, so they walked around the neighborhood until they found a bar that was open and shot some pool. After closing that place down as well, they parted ways but soon after were inseparable, spending all their free time together.
-  They enjoyed camping, cooking, concerts, eating out, traveling, spending time with family/friends and taking Bella (Ryan’s dog) on long walks. Angela moved in with Ryan in April of 2022 and 8 months later Ryan proposed!
-</p>
+<p style="white-space: pre-wrap;">It all started in the summer of 2021 when Ryan asked Angela out on their first date to his favorite roast beef spot in town. It was a Monday night so the date was expected to be a short one but as Nicks was closing down, neither wanted the date to end. So they walked around the neighborhood until they found a bar that was open and shot some pool. After closing that place down as well, they parted ways but soon after were inseparable, spending all their free time together.
 
-<img class="img-fluid my-5" src="/assets/outside-nicks-philadelphia.jpeg" />
+  They enjoyed camping, cooking, concerts, eating out, traveling, spending time with family/friends and taking Bella on long walks. They moved in together spring of 2022 and 8 months later he proposed!</p>
 
-<p style="white-space: pre-wrap;">
-  How did Ryan propose?
-  Angela: We were watching a band play at our favorite music venue. Once the band was done playing, he asked to get a picture on stage with him. I thought it was a silly idea and said no even though he was being very persistent. As we were leaving, Ryan wanted to check out their larger stage downstairs. I really didn’t want to go but I agreed to make it a very quick stop. He once again asked if I wanted a picture on the stage. I felt bad saying no again so we made our way to the stage.
-  I’m sure you can guess the rest…. While taking pictures, he got down on one knee and proposed! What's so special is we’ll be getting married on that very same stage exactly one year from then!
-</p>
+<div class="divider m-4"></div>
 
-<p style="white-space: pre-wrap;">
-  What was your most memorable date?
-  Both: Walking to our local diner on Sunday mornings for brunch. Angela loves drenching her corned beef hash with Ryan's homemade hot sauce!
+<h3>TIDBITS</h3>
 
-  What is your favorite trip together?
-  Angela: Our trip to Mexico! It was such a fun trip with friends and I loved experiencing Ryan's first international trip together.
-  Ryan: I love all of our camping trips although her idea of camping is different than mine. I like camp fires and good food. She likes hiking and dehydrated food out of a bag.
+<h4>What was your first impression?</h4>
+<p style="white-space: pre-wrap;">Ryan: "She’s really cute! I'll have to get creative to win her over."
+  Angela: "I thought he was attractive but also very high energy... like a little much ha. I wasn't sure I could keep up at first but it ended up being a perfect fit."</p>
 
-  What was your first impression?
-  Ryan: She’s really cute.... I'll have to get creative to win her over.
-  Angela: I thought he was attractive but also very high energy... like a little much ha. I wasn't sure I could keep up at first but it ended up being a perfect fit.
+<h4>What was your most memorable date?</h4>
+<p>Both: "Walking to our local diner on Sunday mornings for brunch. Angela loves drenching her corned beef hash with Ryan's homemade hot sauce!"</p>
 
-  What is your favorite activity together?
-  Angela: Traveling!
-  Ryan: A quiet night in.
+<h4>What is your favorite trip together?</h4>
+<p style="white-space: pre-wrap;">Angela: "Our trip to Mexico! It was such a fun trip with friends and I loved experiencing Ryan's first international trip together."
+  Ryan: "I love all of our camping trips although her idea of camping is different than mine. I like camp fires and good food. She likes hiking and dehydrated food out of a bag."</p>
 
-  What's your favorite thing about the other person?
-  Angela: I love how hard-working and caring he is. He always knows how to make me feel special and is so thoughtful and sweet with me. I can’t wait to call him my husband!
-  Ryan: She’s really ambitious and an excellent planner. Whether it’s what to eat for dinner or where to spend our retirement, I love making plans with her.
-</p>
+<h4>What is your favorite activity together?</h4>
+<p style="white-space: pre-wrap;">Angela: "Traveling!"
+  Ryan: "A quiet night in."</p>
+
+<h4>How did Ryan propose?</h4>
+<p>We were watching a band play at our favorite music venue. Once the band was done playing, he asked to get a picture on stage with him. I thought it was a silly idea and said no even though he was being very persistent. As we were leaving, Ryan wanted to check out their larger stage downstairs. I really didn’t want to go but I agreed to make it a very quick stop. He once again asked if I wanted a picture on the stage. I felt bad saying no again so we made our way to the stage. I’m sure you can guess the rest... While taking pictures, he got down on one knee and proposed! What's so special is we’ll be getting married on that very same stage exactly one year from then!</p>
