--- a/app/views/sites/main/_travel.html.erb
+++ b/app/views/sites/main/_travel.html.erb
@@ -12,7 +12,7 @@
     </address>
   </div>
   <div class="col-6 align-self-center">
-    <p><small>To get the discounted rate, make hotel reservations online or call the toll-free number 888-575-6397.</small></p>
+    <p><small>To get the discounted rate, make hotel reservations by clicking the link below or calling the number 888-575-6397 and mention the Quiceno/Tulino wedding.</small></p>
     <a href="https://www.loewshotels.com/philadelphia-hotel/quiceno-tulino-wedding" target="_blank" class="btn btn-lg btn-info">Click here to book!</a>
   </div>
 
