--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -144,6 +144,9 @@ body.site-main .tagline {
 
 
 @media (min-width: 992px) {
+    .img-fluid {
+        max-width: 70%;
+    }
     body.site-main .tagline {
         margin-top: 0;
     }
