--- a/app/views/sites/main.html.erb
+++ b/app/views/sites/main.html.erb
@@ -27,7 +27,7 @@
           <a class="nav-link fs-3" data-bs-toggle="tab" href="#nav-todo" role="tab" aria-controls="settings" aria-selected="false">Things to do</a>
         </li>
         <li class="nav-item" role="presentation">
-          <a class="nav-link fs-3" target="_blank" href="https://www.zola.com/registry/aqrt">Registry</a>
+          <a class="nav-link fs-3" data-bs-toggle="tab" href="#nav-registry" role="tab" aria-controls="settings" aria-selected="false">Registry</a>
         </li>
         <li class="nav-item align-self-center" role="presentation">
           <button class="btn btn-sm btn-danger fs-3" data-bs-toggle="tab" data-bs-target="#nav-rsvp" role="tab" aria-controls="settings" aria-selected="false">RSVP</button>
@@ -51,6 +51,9 @@
     </div>
     <div class="tab-pane fade" id="nav-rsvp" role="tabpanel" aria-labelledby="rsvp-tab">
       <%= render 'sites/main/rsvp' %>
+    </div>
+    <div class="tab-pane fade" id="nav-registry" role="tabpanel" aria-labelledby="registry-tab">
+      <%= render 'sites/main/registry' %>
     </div>
   </div>
 
