--- a/app/views/sites/main.html.erb
+++ b/app/views/sites/main.html.erb
@@ -27,6 +27,9 @@
           <a class="nav-link fs-3" data-bs-toggle="tab" href="#nav-todo" role="tab" aria-controls="settings" aria-selected="false">Things to do</a>
         </li>
         <li class="nav-item" role="presentation">
+          <a class="nav-link fs-3" data-bs-toggle="tab" href="#nav-gallery" role="tab" aria-controls="settings" aria-selected="false">Photo Gallery</a>
+        </li>
+        <li class="nav-item" role="presentation">
           <a class="nav-link fs-3" data-bs-toggle="tab" href="#nav-registry" role="tab" aria-controls="settings" aria-selected="false">Registry</a>
         </li>
         <li class="nav-item align-self-center" role="presentation">
@@ -49,11 +52,14 @@
     <div class="tab-pane fade" id="nav-todo" role="tabpanel" aria-labelledby="todo-tab">
       <%= render 'sites/main/todo' %>
     </div>
-    <div class="tab-pane fade" id="nav-rsvp" role="tabpanel" aria-labelledby="rsvp-tab">
-      <%= render 'sites/main/rsvp' %>
+    <div class="tab-pane fade" id="nav-gallery" role="tabpanel" aria-labelledby="gallery-tab">
+      <%= render 'sites/main/gallery' %>
     </div>
     <div class="tab-pane fade" id="nav-registry" role="tabpanel" aria-labelledby="registry-tab">
       <%= render 'sites/main/registry' %>
+    </div>
+    <div class="tab-pane fade" id="nav-rsvp" role="tabpanel" aria-labelledby="rsvp-tab">
+      <%= render 'sites/main/rsvp' %>
     </div>
   </div>
 
