--- a/app/views/sites/main/_gallery.html.erb
+++ b/app/views/sites/main/_gallery.html.erb
@@ -5,87 +5,87 @@
       <img src="assets/gallery/DSC_9339.jpg" class="img-fluid rounded poppable my-2" title="Beach day in January!"/>
     </div>
     <div class="col-4">
-      <img src="assets/gallery/DSC_9305.jpg" class="img-fluid rounded poppable my-2"/>
-      <img src="assets/gallery/DSC_9311.jpg" class="img-fluid rounded poppable my-2"/>
+      <img src="assets/gallery/DSC_9305.jpg" class="img-fluid rounded poppable my-2" title="Beach day in January!"/>
+      <img src="assets/gallery/DSC_9311.jpg" class="img-fluid rounded poppable my-2" title="Beach day in January!"/>
     </div>
   </div>
 
   <div class="row py-4">
     <div class="col-4">
-      <img src="assets/gallery/Angela_N_Ryan_Edit-9718.jpg" class="img-fluid rounded poppable my-2"/>
-      <img src="assets/gallery/DSC_9378.jpg" class="img-fluid rounded poppable my-2"/>
+      <img src="assets/gallery/Angela_N_Ryan_Edit-9718.jpg" class="img-fluid rounded poppable my-2" title="Beach day in January!"/>
+      <img src="assets/gallery/DSC_9378.jpg" class="img-fluid rounded poppable my-2" title="Beach day in January!"/>
     </div>
-    <div class="col-8"><img src="assets/gallery/Image 2-11-23 at 6.22 PM.jpg" class="img-fluid rounded poppable my-2"/></div>
+    <div class="col-8"><img src="assets/gallery/Image 2-11-23 at 6.22 PM.jpg" class="img-fluid rounded poppable my-2" title="Ryan's birthday camping trip in the Adirondack Mountains"/></div>
   </div>
 
   <div class="row py-4">
-    <div class="col-sm"><img src="assets/gallery/Image 2-11-23 at 6.23 PM.jpg" class="img-fluid rounded poppable my-2"/></div>
-    <div class="col-sm"><img src="assets/gallery/Image 2-11-23 at 6.25 PM.jpg" class="img-fluid rounded poppable my-2"/></div>
-    <div class="col-sm"><img src="assets/gallery/Image 2-11-23 at 6.25 PM (1).jpg" class="img-fluid rounded poppable my-2"/></div>
+    <div class="col-sm"><img src="assets/gallery/Image 2-11-23 at 6.23 PM.jpg" class="img-fluid rounded poppable my-2" title="Cena en mexico"/></div>
+    <div class="col-sm"><img src="assets/gallery/Image 2-11-23 at 6.25 PM.jpg" class="img-fluid rounded poppable my-2" title="The proposal 💍"/></div>
+    <div class="col-sm"><img src="assets/gallery/Image 2-11-23 at 6.25 PM (1).jpg" class="img-fluid rounded poppable my-2" title="Moments after the proposal 💍"/></div>
   </div>
 
   <div class="row py-4">
     <div class="col-4">
-      <img src="assets/gallery/Image 2-11-23 at 6.47 PM.jpg" class="img-fluid rounded poppable my-2"/>
-      <img src="assets/gallery/Image 2-11-23 at 6.48 PM.jpg" class="img-fluid rounded poppable my-2"/>
+      <img src="assets/gallery/Image 2-11-23 at 6.47 PM.jpg" class="img-fluid rounded poppable my-2" title="Angela's MBA Graduation"/>
+      <img src="assets/gallery/Image 2-11-23 at 6.48 PM.jpg" class="img-fluid rounded poppable my-2" title="Ryan's birthday camping trip in the Adirondack Mountains"/>
     </div>
-    <div class="col-8"><img src="assets/gallery/Image 2-11-23 at 6.48 PM (1).jpg" class="img-fluid rounded poppable my-2"/></div>
+    <div class="col-8"><img src="assets/gallery/Image 2-11-23 at 6.48 PM (1).jpg" class="img-fluid rounded poppable my-2" title="Zooming around Cabo San Lucas"/></div>
   </div>
 
   <div class="row py-4">
-    <div class="col-6 col-md-4"><img src="assets/gallery/Image 2-11-23 at 7.16 PM.jpg" class="img-fluid rounded poppable my-2"/></div>
-    <div class="col-6 col-md-4"><img src="assets/gallery/Image 2-11-23 at 7.17 PM.jpg" class="img-fluid rounded poppable my-2"/></div>
-    <div class="col-6 col-md-4"><img src="assets/gallery/IMG_5401.jpg" class="img-fluid rounded poppable my-2"/></div>
+    <div class="col-6 col-md-4"><img src="assets/gallery/Image 2-11-23 at 7.16 PM.jpg" class="img-fluid rounded poppable my-2" title="Playing on the beach with Bella"/></div>
+    <div class="col-6 col-md-4"><img src="assets/gallery/Image 2-11-23 at 7.17 PM.jpg" class="img-fluid rounded poppable my-2" title="Playing on the beach with Bella"/></div>
+    <div class="col-6 col-md-4"><img src="assets/gallery/IMG_5401.jpg" class="img-fluid rounded poppable my-2" title="Hiking the waterfalls at Ricketts Glen"/></div>
   </div>
 
   <div class="row py-4">
-    <div class="col-6"><img src="assets/gallery/IMG_5485.jpg" class="img-fluid rounded poppable my-2"/></div>
-    <div class="col-6"><img src="assets/gallery/IMG_5551.jpg" class="img-fluid rounded poppable my-2"/></div>
+    <div class="col-6"><img src="assets/gallery/IMG_5485.jpg" class="img-fluid rounded poppable my-2" title="Christmas beer garden"/></div>
+    <div class="col-6"><img src="assets/gallery/IMG_5551.jpg" class="img-fluid rounded poppable my-2" title="Our first Christmas!"/></div>
   </div>
 
   <div class="row py-4">
     <div class="col-sm">
-      <img src="assets/gallery/IMG_7354.jpg" class="img-fluid rounded poppable my-2"/>
+      <img src="assets/gallery/IMG_7354.jpg" class="img-fluid rounded poppable my-2" title="Ryan's birthday camping trip in the Adirondack Mountains"/>
     </div>
     <div class="col-sm">
-      <img src="assets/gallery/DSC_9426.jpg" class="img-fluid rounded poppable my-2"/>
+      <img src="assets/gallery/DSC_9426.jpg" class="img-fluid rounded poppable my-2" title="Beach day in January!"/>
     </div>
     <div class="col-sm">
-      <img src="assets/gallery/PXL_20211216_000918401.jpeg" class="img-fluid rounded poppable my-2"/>
+      <img src="assets/gallery/PXL_20211216_000918401.jpeg" class="img-fluid rounded poppable my-2" title="Winterfest on the delaware river waterfront"/>
     </div>
   </div>
 
   <div class="row py-4">
     <div class="col-4">
-      <img src="assets/gallery/PXL_20220101_045706394.jpeg" class="img-fluid rounded poppable my-2"/>
-      <img src="assets/gallery/PXL_20220116_182645695.jpeg" class="img-fluid rounded poppable my-2"/>
+      <img src="assets/gallery/PXL_20220101_045706394.jpeg" class="img-fluid rounded poppable my-2" title="Our first new years!"/>
+      <img src="assets/gallery/PXL_20220116_182645695.jpeg" class="img-fluid rounded poppable my-2" title="Villanova Basketball #NOVANATION"/>
     </div>
-    <div class="col-8"><img src="assets/gallery/PXL_20220818_231044436.jpeg" class="img-fluid rounded poppable my-2"/></div>
+    <div class="col-8"><img src="assets/gallery/PXL_20220818_231044436.jpeg" class="img-fluid rounded poppable my-2" title="Summer concerts in camden (Santana)"/></div>
   </div>
 
   <div class="row py-4">
-    <div class="col-sm"><img src="assets/gallery/PXL_20220910_182745969.jpeg" class="img-fluid rounded poppable my-2"/></div>
-    <div class="col-sm"><img src="assets/gallery/PXL_20220929_171519885.jpeg" class="img-fluid rounded poppable my-2"/></div>
+    <div class="col-sm"><img src="assets/gallery/PXL_20220910_182745969.jpeg" class="img-fluid rounded poppable my-2" title="Our second visit to Pepperfest! (Our annual tradition)"/></div>
+    <div class="col-sm"><img src="assets/gallery/PXL_20220929_171519885.jpeg" class="img-fluid rounded poppable my-2" title="Ryan's birthday camping trip in the Adirondack Mountains"/></div>
   </div>
 
   <div class="row py-4">
     <div class="col-4">
-      <img src="assets/gallery/Image 2-11-23 at 6.20 PM.jpg" class="img-fluid rounded poppable my-2"/>
-      <img src="assets/gallery/Image 2-11-23 at 6.21 PM.jpg" class="img-fluid rounded poppable my-2"/>
+      <img src="assets/gallery/Image 2-11-23 at 6.20 PM.jpg" class="img-fluid rounded poppable my-2" title="Phillies games"/>
+      <img src="assets/gallery/Image 2-11-23 at 6.21 PM.jpg" class="img-fluid rounded poppable my-2" title="Tulip festival"/>
     </div>
     <div class="col-8">
-      <img src="assets/gallery/PXL_20220416_224135464.jpeg" class="img-fluid rounded poppable my-2"/>
+      <img src="assets/gallery/PXL_20220416_224135464.jpeg" class="img-fluid rounded poppable my-2" title="Addison street ❤️"/>
     </div>
   </div>
 
   <div class="row py-4">
     <div class="col">
-      <img src="assets/gallery/PXL_20230207_001319029.jpeg" class="img-fluid rounded poppable my-2"/>
-      <img src="assets/gallery/PXL_20221030_002306057.jpeg" class="img-fluid rounded poppable my-2"/>
+      <img src="assets/gallery/PXL_20230207_001319029.jpeg" class="img-fluid rounded poppable my-2" title="Flyers game"/>
+      <img src="assets/gallery/PXL_20221030_002306057.jpeg" class="img-fluid rounded poppable my-2" title="Halloween cheesin"/>
     </div>
     <div class="col">
-      <img src="assets/gallery/PXL_20221015_174204844.jpeg" class="img-fluid rounded poppable my-2"/>
-      <img src="assets/gallery/PXL_20221217_164116828.jpeg" class="img-fluid rounded poppable my-2"/>
+      <img src="assets/gallery/PXL_20221015_174204844.jpeg" class="img-fluid rounded poppable my-2" title="Gondala ride in Las Vegas"/>
+      <img src="assets/gallery/PXL_20221217_164116828.jpeg" class="img-fluid rounded poppable my-2" title="Publix ❤️"/>
     </div>
   </div>
 
