--- a/app/views/sites/main/_gallery.html.erb
+++ b/app/views/sites/main/_gallery.html.erb
@@ -19,7 +19,7 @@
   </div>
 
   <div class="row py-4">
-    <div class="col-sm"><img src="assets/gallery/Image 2-11-23 at 6.23 PM.jpg" class="img-fluid rounded poppable my-2" title="Cena en mexico"/></div>
+    <div class="col-sm"><img src="assets/gallery/Image 2-11-23 at 6.23 PM.jpg" class="img-fluid rounded poppable my-2" title="Dinner with friends!"/></div>
     <div class="col-sm"><img src="assets/gallery/Image 2-11-23 at 6.25 PM.jpg" class="img-fluid rounded poppable my-2" title="The proposal 💍"/></div>
     <div class="col-sm"><img src="assets/gallery/Image 2-11-23 at 6.25 PM (1).jpg" class="img-fluid rounded poppable my-2" title="Moments after the proposal 💍"/></div>
   </div>
