--- a/app/views/sites/main/_venue.html.erb
+++ b/app/views/sites/main/_venue.html.erb
@@ -1,5 +1,5 @@
 <!-- Venue details -->
-<img class="img-fluid my-4" src="/assets/worldcafelive.jpeg" />
+<img class="img-fluid mb-4" src="/assets/WCL.jpeg" />
 
 <h2>
   <i class="bi bi-globe-americas"></i> World Cafe Live <i class="bi bi-music-note-beamed"></i>
