--- a/app/views/sites/main/_registry.html.erb
+++ b/app/views/sites/main/_registry.html.erb
@@ -1,7 +1,7 @@
 <!-- Registry -->
 <div class="divider"></div>
 
-<p>In lieu of a physical gift, we would greatly appreciate a contribution to our Honeymoon or New House Fund.
-  There will be a card bowl at the wedding, but feel free to contribute through our Zola registry by clicking the link below.</p>
-
-<a class="btn btn-lg btn-danger" target="_blank" href="https://www.zola.com/registry/aqrt">Click here to view our registry!</a>
+<p>
+  We’ve registered on Amazon & Zola for everything we need to start our married life together!
+  You can find our registry online at <a target="_blank" href="https://www.zola.com/registry/aqrt">https://www.zola.com/registry/aqrt</a>
+</p>
