--- a/app/views/sites/main/_venue.html.erb
+++ b/app/views/sites/main/_venue.html.erb
@@ -10,7 +10,12 @@
 </address>
 
 <h3>Saturday, December 2nd</h3>
-<p class="text-danger">Time to be announced.</p>
+
+<h3>4:30 pm</h3>
+
+<br />
+
+<p>Attire: Formal Wedding Attire</p>
 
 <p>The ceremony, cocktail hour, and reception will take place indoors at World Cafe Live.</p>
 
