--- a/app/views/sites/main/_venue.html.erb
+++ b/app/views/sites/main/_venue.html.erb
@@ -1,22 +1,30 @@
-<!-- Venue details -->
-<img class="img-fluid mb-4" src="/assets/WCL.jpeg" />
+<div class="row">
+  <div class="col-12 col-lg-7 pt-4">
+    <h2 class="fs-1 text-decoration-underline">Wedding Ceremony & Reception</h2>
 
-<h2>
-  <i class="bi bi-globe-americas"></i> World Cafe Live <i class="bi bi-music-note-beamed"></i>
-</h2>
+    <div class="ticket">
+      <h3>
+        <i class="bi bi-globe-americas"></i> World Cafe Live <i class="bi bi-music-note-beamed"></i>
+      </h3>
 
-<address>
-  <a href="https://goo.gl/maps/PuU4d5M4VLqQwxm28" target="_blank">3025 Walnut Street</a>
-</address>
+      <address>
+        <a href="https://goo.gl/maps/PuU4d5M4VLqQwxm28" target="_blank">3025 Walnut Street</a>
+      </address>
 
-<h3>Saturday, December 2nd</h3>
+      <h4>Saturday, December 2nd</h4>
 
-<h3>4:30 pm</h3>
+      <h4>4:30 pm - 11:00 pm</h4>
+    </div>
 
-<br />
+    <p>Please arrive by 4:15 pm</p>
 
-<p>Attire: Formal Wedding Attire</p>
+    <p>Attire: Formal Wedding Attire</p>
 
-<p>The ceremony, cocktail hour, and reception will take place indoors at World Cafe Live.</p>
+    <p>The ceremony, cocktail hour, and reception will take place indoors at World Cafe Live.</p>
 
-<p>There is metered street parking available or a nearby <a href="https://goo.gl/maps/wRj29GpKFUR8VV2Z6" target="_blank">parking lot</a> and <a href="https://goo.gl/maps/hh4quEcbJxFXgXTr6" target="_blank">covered garage</a> for a fee.</p>
+    <p>There is metered street parking available or a nearby <a href="https://goo.gl/maps/wRj29GpKFUR8VV2Z6" target="_blank">parking lot</a> and <a href="https://goo.gl/maps/hh4quEcbJxFXgXTr6" target="_blank">covered garage</a> for a fee.</p>
+  </div>
+  <div class="col-lg-5 d-flex align-items-center">
+    <img class="w-100 mb-4" src="/assets/WCL.jpeg" />
+  </div>
+</div>
