--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -145,6 +145,23 @@ body.site-main .tagline {
     margin-bottom: 1.5rem;
 }
 
+.ticket {
+    background-image: url(/assets/ticket.png);
+    -webkit-background-size: 60%;
+    background-size: 60%;
+    background-repeat: no-repeat;
+    -webkit-background-position: center;
+    background-position: center;
+    padding: 4em;
+}
+
+
+@media (max-width: 992px) {
+    .ticket {
+        -webkit-background-size: 100%;
+        background-size: 100%;
+    }
+}
 
 @media (min-width: 992px) {
     .img-fluid {
@@ -181,14 +198,4 @@ body.site-admin {
 .hide-group
 {
     opacity: 0;
-}
-
-.ticket {
-    background-image: url(/assets/ticket.png);
-    -webkit-background-size: 60%;
-    background-size: 60%;
-    background-repeat: no-repeat;
-    -webkit-background-position: center;
-    background-position: center;
-    padding: 3em;
 }
