add more photos

--- a/app/views/sites/main/_gallery.html.erb
+++ b/app/views/sites/main/_gallery.html.erb
@@ -88,6 +88,67 @@
       <img src="assets/gallery/PXL_20221217_164116828.jpeg" class="img-fluid rounded poppable my-2" title="Publix ❤️"/>
     </div>
   </div>
+
+  <div class="row py-4">
+    <div class="col-sm"><img src="assets/gallery/PXL_20230212_235623405.jpeg" class="img-fluid rounded poppable my-2" title=""/></div>
+    <div class="col-sm"><img src="assets/gallery/PXL_20230330_232352287.jpeg" class="img-fluid rounded poppable my-2" title=""/></div>
+    <div class="col-sm"><img src="assets/gallery/PXL_20230409_214051080.jpeg" class="img-fluid rounded poppable my-2" title=""/></div>
+  </div>
+
+  <div class="row py-4">
+    <div class="col-4">
+      <img src="assets/gallery/PXL_20230413_145158630.jpeg" class="img-fluid rounded poppable my-2" title=""/>
+      <img src="assets/gallery/PXL_20230414_185451246.jpeg" class="img-fluid rounded poppable my-2" title=""/>
+    </div>
+    <div class="col-8"><img src="assets/gallery/PXL_20230415_173705549.jpeg" class="img-fluid rounded poppable my-2" title=""/></div>
+  </div>
+
+  <div class="row py-4">
+    <div class="col-6 col-md-4"><img src="assets/gallery/PXL_20230415_191715835.jpeg" class="img-fluid rounded poppable my-2" title=""/></div>
+    <div class="col-6 col-md-4"><img src="assets/gallery/PXL_20230517_233129259.jpeg" class="img-fluid rounded poppable my-2" title=""/></div>
+    <div class="col-6 col-md-4"><img src="assets/gallery/PXL_20230518_182630691.jpeg" class="img-fluid rounded poppable my-2" title=""/></div>
+  </div>
+
+  <div class="row py-4">
+    <div class="col-6"><img src="assets/gallery/PXL_20230518_215349146.jpeg" class="img-fluid rounded poppable my-2" title=""/></div>
+    <div class="col-6"><img src="assets/gallery/PXL_20230520_034533145.jpeg" class="img-fluid rounded poppable my-2" title=""/></div>
+  </div>
+
+  <div class="row py-4">
+    <div class="col-sm">
+      <img src="assets/gallery/PXL_20230520_164234158.jpeg" class="img-fluid rounded poppable my-2" title=""/>
+    </div>
+    <div class="col-sm">
+      <img src="assets/gallery/PXL_20230521_032812628.jpeg" class="img-fluid rounded poppable my-2" title=""/>
+    </div>
+    <div class="col-sm">
+      <img src="assets/gallery/PXL_20230602_180714230.jpeg" class="img-fluid rounded poppable my-2" title=""/>
+    </div>
+  </div>
+
+  <div class="row py-4">
+    <div class="col-4">
+      <img src="assets/gallery/PXL_20230613_122158847.jpeg" class="img-fluid rounded poppable my-2" title=""/>
+      <img src="assets/gallery/PXL_20230613_220608559.jpeg" class="img-fluid rounded poppable my-2" title=""/>
+    </div>
+    <div class="col-8"><img src="assets/gallery/PXL_20230613_221150816.MP.jpg" class="img-fluid rounded poppable my-2" title=""/></div>
+  </div>
+
+  <div class="row py-4">
+    <div class="col-sm"><img src="assets/gallery/PXL_20230614_181006736.MP.jpg" class="img-fluid rounded poppable my-2" title=""/></div>
+    <div class="col-sm"><img src="assets/gallery/PXL_20230615_035422009.jpeg" class="img-fluid rounded poppable my-2" title=""/></div>
+  </div>
+
+  <div class="row py-4">
+    <div class="col-6">
+      <img src="assets/gallery/PXL_20230617_015619108.jpeg" class="img-fluid rounded poppable my-2" title=""/>
+      <img src="assets/gallery/PXL_20230617_193211208.MP.jpg" class="img-fluid rounded poppable my-2" title=""/>
+    </div>
+    <div class="col-6">
+      <img src="assets/gallery/PXL_20230708_225133115.jpeg" class="img-fluid rounded poppable my-2" title="️"/>
+      <img src="assets/gallery/IMG_2346.jpeg" class="img-fluid rounded poppable my-2" title="️"/>
+    </div>
+  </div>
 </div>
 
 <div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-hidden="true">
