break cache for js

--- a/app/views/sites/main.html.erb
+++ b/app/views/sites/main.html.erb
@@ -68,4 +68,4 @@
   <p>Made with <i class="bi bi-heart-fill text-danger"></i> in Philadelphia</p>
 </div>
 
-<%= javascript_include_tag 'rsvp' %>
+<%= javascript_include_tag "rsvp.js?date=#{Date.today}" %>
