--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta http-equiv="refresh" content="3600" >
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre%20Baskerville">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cormorant%20Garamond">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
